--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "name": "pmp-master-exam-2026",
   "version": "1.0.0",
   "private": true,
+  "description": "Simulador de examen PMP 2026 PMBOK 8",
+  "scripts": {
+    "dev": "npx serve .",
+    "start": "npx serve .",
+    "build": "echo 'No build step required for ESM version'"
+  },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lucide-react": "^0.284.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "typescript": "^5.0.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.0.0"
   }
 }
