feat: Migrate to Vite for build and development
Replaces the old `serve` based development server with Vite. Updates dependencies, scripts, and configurations to align with Vite's build and development workflow. Includes necessary Vite plugins and removes outdated configurations.

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 
 {
   "version": 2,
-  "cleanUrls": true,
-  "trailingSlash": false,
+  "framework": "vite",
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
